[gd_scene load_steps=11 format=3 uid="uid://lkunv7n8emet"]

[ext_resource type="TileSet" uid="uid://xlq35w1ru86b" path="res://TileMap/new_tile_set.tres" id="1_0fxdt"]
[ext_resource type="Script" path="res://Rooms/room_2.gd" id="1_8cve3"]
[ext_resource type="PackedScene" uid="uid://c6tie7mf8qj34" path="res://Player/player.tscn" id="2_c0xvv"]
[ext_resource type="PackedScene" uid="uid://hfb7b7r05eia" path="res://Mobs/Mob/mob.tscn" id="2_v6imm"]
[ext_resource type="PackedScene" uid="uid://djjyi6f8ftjjs" path="res://Mobs/Killer/killer_cell.tscn" id="3_ccv4f"]
[ext_resource type="PackedScene" uid="uid://elayg8svbarm" path="res://UI/ui.tscn" id="3_grlns"]
[ext_resource type="PackedScene" uid="uid://b0o30tm706lc3" path="res://Rooms/Features/exit_2.tscn" id="4_qcgm7"]
[ext_resource type="PackedScene" uid="uid://6ywdi6nyrmng" path="res://Mobs/B_cell/b_cell.tscn" id="4_sults"]
[ext_resource type="PackedScene" uid="uid://ojrr2k26oixr" path="res://Mobs/White_Cell/white_cell.tscn" id="5_cf4br"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b60fn"]
radius = 102.02

[node name="Room2" type="Node2D"]
script = ExtResource("1_8cve3")
mob_scene = ExtResource("2_v6imm")
killer_scene = ExtResource("3_ccv4f")
bcell_scene = ExtResource("4_sults")
white_scene = ExtResource("5_cf4br")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_0fxdt")
format = 2
layer_0/tile_data = PackedInt32Array(196613, 65537, 1, 262149, 393217, 1, 327685, 65537, 2, 393221, 131073, 1, 458757, 458753, 1, 524293, 65537, 2, 589829, 131073, 2, 655365, 131073, 2, 720901, 65537, 7, 786437, 131073, 6, 196614, 65537, 6, 262150, 131073, 7, 327686, 393217, 1, 393222, 65537, 7, 458758, 131073, 7, 524294, 131073, 1, 589830, 131073, 6, 655366, 131073, 2, 720902, 65537, 6, 786438, 65537, 1, 196615, 65537, 2, 262151, 393217, 1, 327687, 65537, 2, 393223, 131073, 7, 458759, 131073, 6, 524295, 131073, 7, 589831, 65537, 1, 655367, 65537, 7, 720903, 131073, 7, 786439, 458753, 1, 196616, 65537, 2, 262152, 393217, 1, 327688, 131073, 6, 393224, 65537, 1, 458760, 393217, 1, 524296, 65537, 2, 589832, 131073, 6, 655368, 131073, 1, 720904, 131073, 1, 786440, 131073, 1, 196617, 131073, 2, 262153, 131073, 1, 327689, 393217, 2, 393225, 65537, 7, 458761, 131073, 6, 524297, 458753, 2, 589833, 131073, 1, 655369, 65537, 1, 720905, 458753, 1, 786441, 458753, 1, 196618, 458753, 2, 262154, 393217, 1, 327690, 131073, 2, 393226, 65537, 2, 458762, 65537, 2, 524298, 393217, 1, 589834, 458753, 2, 655370, 131073, 7, 720906, 65537, 7, 786442, 65537, 2, 196619, 131073, 1, 262155, 131073, 1, 327691, 131073, 2, 393227, 393217, 2, 458763, 131073, 1, 524299, 393217, 1, 589835, 393217, 2, 655371, 131073, 7, 720907, 131073, 2, 786443, 65537, 6, 196620, 131073, 2, 262156, 131073, 6, 327692, 65537, 1, 393228, 458753, 2, 458764, 65537, 7, 524300, 131073, 1, 589836, 65537, 2, 655372, 131073, 6, 720908, 131073, 6, 786444, 65537, 1, 196621, 393217, 1, 262157, 65537, 7, 327693, 131073, 6, 393229, 131073, 2, 458765, 131073, 6, 524301, 131073, 1, 589837, 393217, 1, 655373, 393217, 1, 720909, 131073, 1, 786445, 458753, 2, 196622, 131073, 1, 262158, 65537, 2, 327694, 131073, 6, 393230, 131073, 6, 458766, 65537, 6, 524302, 65537, 6, 589838, 65537, 2, 655374, 131073, 1, 720910, 65537, 2, 786446, 65537, 1, 131078, 131073, 1, 131079, 65537, 2, 131080, 65537, 1, 131081, 393217, 2, 131082, 458753, 1, 131083, 131073, 7, 131084, 65537, 1, 131085, 65537, 7, 65543, 458753, 1, 65544, 131073, 2, 65545, 65537, 1, 65546, 393217, 2, 65547, 393217, 1, 65548, 131073, 1, 8, 65537, 2, 9, 65537, 6, 10, 458753, 1, 11, 458753, 1, 720911, 65537, 7, 655375, 131073, 1, 589839, 65537, 6, 524303, 131073, 1, 458767, 131073, 6, 393231, 393217, 1, 327695, 65537, 2, 262159, 458753, 1, 851981, 131073, 2, 851980, 458753, 1, 851979, 131073, 7, 851978, 131073, 6, 851977, 65537, 1, 851976, 131073, 6, 851975, 393217, 2, 851974, 458753, 2, 720900, 131073, 7, 655364, 393217, 1, 589828, 65537, 1, 524292, 458753, 1, 458756, 393217, 1, 393220, 131073, 7, 327684, 65537, 1, 262148, 458753, 2, 327683, 393217, 2, 393219, 131073, 7, 458755, 458753, 1, 524291, 131073, 7, 589827, 131073, 6, 655363, 65537, 1, 917511, 131073, 2, 917512, 393217, 1, 917513, 65537, 6, 917514, 131073, 6, 917515, 393217, 2, 917516, 393217, 2, 655376, 131073, 6, 589840, 458753, 2, 524304, 393217, 1, 458768, 131073, 7, 393232, 65537, 7, 327696, 65537, 2, 393233, 458753, 1, 458769, 65537, 2, 524305, 393217, 1, 589841, 458753, 1, 393218, 131073, 7, 458754, 458753, 1, 524290, 65537, 6, 589826, 458753, 1, 983048, 131073, 6, 983049, 458753, 2, 983050, 393217, 2, 983051, 65537, 2, -65528, 393217, 5, -65527, 393217, 5, -65526, 393217, 5, -65525, 458753, 5, 1048584, 458753, 8, 1048585, 458753, 8, 1048586, 458753, 8, 1048587, 393217, 8, 393234, 524289, 7, 458770, 524289, 6, 524306, 524289, 7, 589842, 524289, 6, 393217, 327681, 6, 458753, 327681, 7, 524289, 327681, 7, 589825, 327681, 7, 327682, 327681, 5, 262147, 327681, 5, 196612, 327681, 5, 131077, 327681, 5, 65542, 327681, 5, 7, 327681, 5, 327697, 524289, 5, 262160, 524289, 5, 196623, 524289, 5, 131086, 524289, 5, 65549, 524289, 5, 12, 524289, 5, 655377, 524289, 8, 720912, 524289, 8, 786447, 524289, 8, 851982, 524289, 8, 917517, 524289, 8, 983052, 524289, 8, 983047, 327681, 8, 917510, 327681, 8, 851973, 327681, 8, 786436, 327681, 8, 720899, 327681, 8, 655362, 327681, 8)

[node name="Exit2" parent="." instance=ExtResource("4_qcgm7")]
position = Vector2(1111, 136)

[node name="Player" parent="." instance=ExtResource("2_c0xvv")]
position = Vector2(536, 659)

[node name="Camera2D" type="Camera2D" parent="Player"]
visible = false

[node name="Entrance" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance"]
position = Vector2(538, 660)
shape = SubResource("CircleShape2D_b60fn")

[node name="Spawn Locations" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Spawn Locations"]
position = Vector2(1819, 695)

[node name="Marker2D2" type="Marker2D" parent="Spawn Locations"]
position = Vector2(2120, 867)

[node name="Marker2D3" type="Marker2D" parent="Spawn Locations"]
position = Vector2(1841, 1220)

[node name="bcell" type="Marker2D" parent="Spawn Locations"]
position = Vector2(1351, 287)

[node name="killer" type="Marker2D" parent="Spawn Locations"]
position = Vector2(348, 1058)

[node name="white" type="Marker2D" parent="Spawn Locations"]
position = Vector2(1254, 1640)

[node name="UI" parent="." instance=ExtResource("3_grlns")]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[connection signal="body_exited" from="Entrance" to="." method="_on_entrance_body_exited"]
